--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 .declare-get-tag: &declare-get-tag |
-    function get-tag() {
+    function getTag() {
         local FILE_VERSION_PATH=${1}
         local DEFAULT_TAG=${2}
         if [ ! $DEFAULT_TAG ]; then 
@@ -50,7 +50,7 @@ tag:release:register:
         - git config --global user.name "William Donnette"
         - git remote remove origin
         - git remote add origin https://oauth2:$OAUTH_TOKEN@$CI_SERVER_HOST/$CI_PROJECT_PATH.git
-        - get-tag "$FILE_VERSION_PATH" "$TAG"
+        - getTag "$FILE_VERSION_PATH" "$TAG"
         - git tag -a "$TAG_NAME" -m "Version $TAG_NAME"
         - git push origin "$TAG_NAME"
 
