--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,13 @@
         fi
     }
 
+default:
+    artifacts:
+        paths:
+            - package-lock.json
+            - node_modules
+            - coverage
+
 # Installe les dépendances Node.js
 # Mets en place les caches
 node:install:
