--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "jobar",
-	"version": "1.0.7",
+	"version": "1.0.8",
 	"description": "",
 	"main": "./dist/index.js",
 	"module": "./dist/index.mjs",
@@ -8,6 +8,9 @@
 	"files": [
 		"dist"
 	],
+	"publishConfig": {
+		"access": "public"
+	},
 	"scripts": {
 		"test": "nyc mocha --exit --require ts-node/register --require source-map-support/register src/**/*.spec.ts",
 		"build": "tsup"
