--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -121,6 +121,8 @@ package:register:
         - apk add bash curl
         - curl --silent "https://gitlab.com/gitlab-org/incubation-engineering/mobile-devops/download-secure-files/-/raw/main/installer" | bash
     script:
+        - ls -al
+        - cat .npmrc
         - npm install
         - npm run build
         - npm publish
