--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-node_modules
-.npmrc
-dist
+**/node_modules
+**/.npmrc
+**/dist
 **/.env
-.nyc_output
-coverage
+**/.nyc_output
+**/coverage
+**/logs
+**/lib
