--- a/examples/encrypted-data/package.json
+++ b/examples/encrypted-data/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "jobar-examples/hello-world",
+	"name": "jobar-examples/encrypted-data",
 	"version": "0.0.1",
 	"description": "Example for Jobar - Hello World",
 	"main": "index.ts",
@@ -8,11 +8,12 @@
 		"dev": "nodemon index.ts",
 		"build": "tsc --build",
 		"start": "node lib/index.js",
-		"link": "cd ../../ && npm run build && npm link && cd examples/hello-world/ && npm link jobar"
+		"link": "cd ../../ && npm run build && npm link && cd examples/encrypted-data/ && npm link jobar"
 	},
 	"author": "William Donnette",
 	"license": "MIT",
 	"devDependencies": {
+		"@istanbuljs/nyc-config-typescript": "^1.0.2",
 		"@temporalio/testing": "^1.11.7",
 		"@tsconfig/node16": "^16.1.3",
 		"@types/express": "^5.0.0",
@@ -24,7 +25,6 @@
 		"typescript": "^5.7.3"
 	},
 	"dependencies": {
-		"express": "^4.21.2",
-		"jobar": "^1.1.1"
+		"express": "^4.21.2"
 	}
 }
