feat: :white_check_mark: Update tests

--- a/examples/encrypted-data/.nycrc
+++ b/examples/encrypted-data/.nycrc
@@ -2,8 +2,6 @@
 	"reporter": ["lcov", "text-summary"],
 	"report-dir": "./coverage",
 	"all": true,
-	"extends": "@istanbuljs/nyc-config-typescript",
-	"require": ["ts-node/register", "source-map-support/register"],
-	"include": ["**/*.ts"],
-	"exclude": ["**/*.spec.ts"]
+	"include": ["src/**/*.ts"],
+	"exclude": ["src/**/*.spec.ts"]
 }
