--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,18 @@
 		"source.organizeImports": "always",
 		"source.sortMembers": "always"
 	},
+	"files.exclude": {
+		"**/.git": true,
+		"**/.svn": true,
+		"**/.hg": true,
+		"**/CVS": true,
+		"**/.DS_Store": true,
+		"**/Thumbs.db": true,
+		"**/dist": true,
+		"**/node_modules": true,
+		"**/.nyc_output": true,
+		"**/coverage": true,
+		"**/logs": true
+	},
 	"workbench.iconTheme": "material-icon-theme"
 }
