--- a/examples/encrypted-data/package.json
+++ b/examples/encrypted-data/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "jobar-examples/encrypted-data",
 	"version": "0.0.1",
-	"description": "Example for Jobar - Hello World",
-	"main": "index.ts",
+	"description": "Example for Jobar - Encrypted Data",
+	"main": "src/index.ts",
 	"scripts": {
 		"test": "nyc mocha --exit --require ts-node/register --require source-map-support/register src/**/*.spec.ts",
-		"dev": "nodemon index.ts",
+		"dev": "nodemon src/index.ts",
 		"build": "tsc --build",
 		"start": "node lib/index.js",
 		"link": "cd ../../ && npm run build && npm link && cd examples/encrypted-data/ && npm link jobar"
