--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -2,10 +2,10 @@
 	"name": "jobar-examples/hello-world",
 	"version": "0.0.1",
 	"description": "Example for Jobar - Hello World",
-	"main": "index.ts",
+	"main": "src/index.ts",
 	"scripts": {
 		"test": "nyc mocha --exit --require ts-node/register --require source-map-support/register src/**/*.spec.ts",
-		"dev": "nodemon index.ts",
+		"dev": "nodemon src/index.ts",
 		"build": "tsc --build",
 		"start": "node lib/index.js",
 		"link": "cd ../../ && npm run build && npm link && cd examples/hello-world/ && npm link jobar"
