feat: :sparkles: Introduce Dockerfile

--- a/examples/encrypted-data/docker-compose.yml
+++ b/examples/encrypted-data/docker-compose.yml
@@ -29,9 +29,9 @@ services:
         networks:
             - temporal-network
         ports:
-            - 7233:7233
+            - ${TEMPORAL_PORT}:${TEMPORAL_PORT}
         healthcheck:
-            test: ['CMD-SHELL', 'temporal operator cluster health --address $(hostname -i):7233']
+            test: ['CMD-SHELL', 'temporal operator cluster health --address $(hostname -i):${TEMPORAL_PORT}']
             interval: 30s
             timeout: 10s
             retries: 5
@@ -42,8 +42,8 @@ services:
             temporal:
                 condition: service_healthy
         environment:
-            - TEMPORAL_ADDRESS=temporal:7233
-            - TEMPORAL_CLI_ADDRESS=temporal:7233
+            - TEMPORAL_ADDRESS=temporal:${TEMPORAL_PORT}
+            - TEMPORAL_CLI_ADDRESS=temporal:${TEMPORAL_PORT}
         networks:
             - temporal-network
         stdin_open: true
@@ -54,13 +54,24 @@ services:
         depends_on:
             - temporal
         environment:
-            - TEMPORAL_ADDRESS=temporal:7233
-            - TEMPORAL_CORS_ORIGINS=http://localhost:3000
+            - TEMPORAL_ADDRESS=temporal:${TEMPORAL_PORT}
+            - TEMPORAL_CORS_ORIGINS=http://localhost:${JOBAR_PORT}
             - TEMPORAL_NOTIFY_ON_NEW_VERSION=true
         networks:
             - temporal-network
         ports:
             - 8082:8080
+    jobar:
+        container_name: jobar
+        depends_on:
+            temporal:
+                condition: service_healthy
+        build:
+            target: prod
+        networks:
+            - temporal-network
+        ports:
+            - 3333:${JOBAR_PORT}
 networks:
     temporal-network:
         driver: bridge
