--- a/examples/encrypted-data/package.json
+++ b/examples/encrypted-data/package.json
@@ -7,7 +7,7 @@
 		"test": "nyc mocha --exit --require ts-node/register --require source-map-support/register src/**/*.spec.ts",
 		"dev": "nodemon src/index.ts",
 		"build": "tsc --build",
-		"start": "node lib/index.js",
+		"start": "node lib/src/index.js",
 		"link": "cd ../../ && npm run build && npm link && cd examples/encrypted-data/ && npm link jobar"
 	},
 	"author": "William Donnette",
@@ -25,6 +25,7 @@
 		"typescript": "^5.7.3"
 	},
 	"dependencies": {
+		"dotenv": "^16.4.7",
 		"express": "^4.21.2",
 		"jobar": "^1.2.0"
 	}
