--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -7,7 +7,7 @@
 		"test": "nyc mocha --exit --require ts-node/register --require source-map-support/register src/**/*.spec.ts",
 		"dev": "nodemon src/index.ts",
 		"build": "tsc --build",
-		"start": "node lib/src/index.js",
+		"start": "node dist/src/index.js",
 		"link": "cd ../../ && npm run build && npm link && cd examples/hello-world/ && npm link jobar"
 	},
 	"author": "William Donnette",
