--- a/examples/hello-world/tsconfig.json
+++ b/examples/hello-world/tsconfig.json
@@ -7,7 +7,7 @@
 		"declarationMap": true,
 		"sourceMap": true,
 		"rootDir": ".",
-		"outDir": "./lib"
+		"outDir": "./dist"
 	},
 	"include": ["src/**/*.ts"]
 }
