--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "jobar",
-	"version": "1.3.0",
+	"version": "1.3.1",
 	"description": "Jobar is a TypeScript library designed to orchestrate workflows with Temporal and expose them seamlessly via an Express API. It simplifies Temporal integration by managing workflows, activities, and task queues while providing a structured way to handle API endpoints for workflow execution.",
 	"keywords": [
 		"jobar",
@@ -26,12 +26,14 @@
 		"access": "public"
 	},
 	"scripts": {
-		"test": "nyc mocha --exit --require ts-node/register --require source-map-support/register src/**/*.spec.ts",
+		"test": "nyc mocha --exit --require ts-node/register --require source-map-support/register src/**/*.spec.ts && npm run open-coverage-report",
+		"open-coverage-report": "node -e \"const os = require('os'); const path = 'coverage/lcov-report/index.html'; if (os.platform() === 'darwin') { require('child_process').execSync('open ' + path); } else if (os.platform() === 'win32') { require('child_process').execSync('start ' + path); } else { require('child_process').execSync('xdg-open ' + path); }\"",
 		"build": "tsup"
 	},
 	"author": "William Donnette",
 	"license": "MIT",
 	"devDependencies": {
+		"@istanbuljs/nyc-config-typescript": "^1.0.2",
 		"@temporalio/testing": "^1.11.7",
 		"@types/cors": "^2.8.17",
 		"@types/express": "^5.0.0",
