fix: :bug: Fix encrypted-data example

--- a/examples/encrypted-data/.nycrc
+++ b/examples/encrypted-data/.nycrc
@@ -3,5 +3,5 @@
 	"report-dir": "./coverage",
 	"all": true,
 	"include": ["src/**/*.ts"],
-	"exclude": ["src/**/*.spec.ts"]
+	"exclude": ["src/**/*.spec.ts", "src/config.ts"]
 }
