--- a/examples/hello-world/.nycrc
+++ b/examples/hello-world/.nycrc
@@ -3,5 +3,5 @@
 	"report-dir": "./coverage",
 	"all": true,
 	"include": ["src/**/*.ts"],
-	"exclude": ["src/**/*.spec.ts"]
+	"exclude": ["src/**/*.spec.ts", "src/config.ts"]
 }
