--- a/tsconfig.json
+++ b/tsconfig.json
@@ -104,7 +104,17 @@
 
 		/* Completeness */
 		// "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-		"skipLibCheck": true /* Skip type checking all .d.ts files. */
+		"skipLibCheck": true /* Skip type checking all .d.ts files. */,
+		"baseUrl": "./src",
+		"paths": {
+			"@src/*": ["*"],
+			"@models": ["models"],
+			"@models/*": ["models/*"],
+			"@utils": ["utils"],
+			"@utils/*": ["utils/*"],
+			"@crypto": ["crypto"],
+			"@crypto/*": ["crypto/*"]
+		}
 	},
 	"include": ["src/**/*.ts"]
 }
