--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,15 +8,11 @@
 	},
 	"files.exclude": {
 		"**/.git": true,
-		"**/.svn": true,
-		"**/.hg": true,
-		"**/CVS": true,
-		"**/.DS_Store": true,
-		"**/Thumbs.db": true,
 		"**/dist": true,
 		"**/.nyc_output": true,
-		// "**/coverage": true,
-		"**/logs": true
+		"**/coverage": true,
+		"**/logs": true,
+		"**/node_modules": true
 	},
 	"workbench.iconTheme": "material-icon-theme"
 }
