--- a/examples/encrypted-data/package.json
+++ b/examples/encrypted-data/package.json
@@ -4,12 +4,12 @@
 	"description": "Example for Jobar - Encrypted Data",
 	"main": "src/index.ts",
 	"scripts": {
-		"test": "nyc mocha --exit --require ts-node/register --require source-map-support/register src/**/*.spec.ts",
-		"dev": "nodemon src/index.ts",
-		"build": "tsc --build",
-		"start": "node dist/src/index.js",
-		"link": "cd ../../ && npm run build && npm link && cd examples/encrypted-data/ && npm link jobar",
-		"open-report": "node -e \"const os = require('os'); const path = 'coverage/lcov-report/index.html'; if (os.platform() === 'darwin') { require('child_process').execSync('open ' + path); } else if (os.platform() === 'win32') { require('child_process').execSync('start ' + path); } else { require('child_process').execSync('xdg-open ' + path); }\""
+		"test": "nyc mocha --exit --r ts-node/register --r source-map-support/register -r tsconfig-paths/register ./src/**/*.spec.ts",
+		"dev": "nodemon -r tsconfig-paths/register src/index.ts",
+		"build": "rm -r ./dist && tsc --build && tsc-alias",
+		"start": "node ./dist/index.js",
+		"link": "cd ../../ && npm run build && npm link && cd ./examples/encrypted-data/ && npm link jobar",
+		"open-report": "node -e \"const os = require('os'); const path = './coverage/lcov-report/index.html'; if (os.platform() === 'darwin') { require('child_process').execSync('open ' + path); } else if (os.platform() === 'win32') { require('child_process').execSync('start ' + path); } else { require('child_process').execSync('xdg-open ' + path); }\""
 	},
 	"author": "William Donnette",
 	"license": "MIT",
@@ -23,11 +23,13 @@
 		"nodemon": "^3.1.9",
 		"nyc": "^17.1.0",
 		"ts-node": "^10.9.2",
+		"tsc-alias": "^1.8.10",
+		"tsconfig-paths": "^4.2.0",
 		"typescript": "^5.7.3"
 	},
 	"dependencies": {
 		"dotenv": "^16.4.7",
 		"express": "^4.21.2",
-		"jobar": "^1.3.0"
+		"jobar": "^1.3.1"
 	}
 }
