--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "jobar",
-	"version": "1.3.1",
+	"version": "1.4.0",
 	"description": "Jobar is a TypeScript library designed to orchestrate workflows with Temporal and expose them seamlessly via an Express API. It simplifies Temporal integration by managing workflows, activities, and task queues while providing a structured way to handle API endpoints for workflow execution.",
 	"keywords": [
 		"jobar",
@@ -26,9 +26,9 @@
 		"access": "public"
 	},
 	"scripts": {
-		"test": "nyc mocha --exit --require ts-node/register --require source-map-support/register src/**/*.spec.ts",
+		"test": "nyc mocha --exit -r ts-node/register -r source-map-support/register -r tsconfig-paths/register src/**/*.spec.ts",
 		"open-report": "node -e \"const os = require('os'); const path = 'coverage/lcov-report/index.html'; if (os.platform() === 'darwin') { require('child_process').execSync('open ' + path); } else if (os.platform() === 'win32') { require('child_process').execSync('start ' + path); } else { require('child_process').execSync('xdg-open ' + path); }\"",
-		"build": "tsup"
+		"build": "tsup src/index.ts --tsconfig tsconfig.json"
 	},
 	"author": "William Donnette",
 	"license": "MIT",
@@ -42,6 +42,7 @@
 		"mocha": "^11.1.0",
 		"nyc": "^17.1.0",
 		"ts-node": "^10.9.2",
+		"tsconfig-paths": "^4.2.0",
 		"tsup": "^8.1.0",
 		"typescript": "^5.4.5"
 	},
