--- a/examples/encrypted-data/package.json
+++ b/examples/encrypted-data/package.json
@@ -4,26 +4,32 @@
 	"description": "Example for Jobar - Encrypted Data",
 	"main": "src/index.ts",
 	"scripts": {
-		"test": "nyc mocha --exit --require ts-node/register --require source-map-support/register src/**/*.spec.ts",
-		"dev": "nodemon src/index.ts",
-		"build": "tsc --build",
-		"start": "node dist/src/index.js",
+		"test": "nyc mocha --exit --r ts-node/register --r source-map-support/register -r tsconfig-paths/register ./src/**/*.spec.ts",
+		"dev": "nodemon -r tsconfig-paths/register src/index.ts",
+		"build": "rm -rf ./dist && tsc --build && tsc-alias",
+		"start": "node ./dist/index.js",
 		"link": "cd ../../ && npm run build && npm link && cd examples/encrypted-data/ && npm link jobar",
-		"open-report": "node -e \"const os = require('os'); const path = 'coverage/lcov-report/index.html'; if (os.platform() === 'darwin') { require('child_process').execSync('open ' + path); } else if (os.platform() === 'win32') { require('child_process').execSync('start ' + path); } else { require('child_process').execSync('xdg-open ' + path); }\""
+		"open-report": "node -e \"const os = require('os'); const path = './coverage/lcov-report/index.html'; if (os.platform() === 'darwin') { require('child_process').execSync('open ' + path); } else if (os.platform() === 'win32') { require('child_process').execSync('start ' + path); } else { require('child_process').execSync('xdg-open ' + path); }\""
 	},
 	"author": "William Donnette",
 	"license": "MIT",
 	"devDependencies": {
 		"@istanbuljs/nyc-config-typescript": "^1.0.2",
+		"@temporalio/nyc-test-coverage": "^1.11.7",
 		"@temporalio/testing": "^1.11.7",
 		"@tsconfig/node16": "^16.1.3",
 		"@types/express": "^5.0.0",
 		"@types/mocha": "^10.0.10",
+		"@types/sinon": "^17.0.4",
 		"mocha": "^11.1.0",
 		"nodemon": "^3.1.9",
 		"nyc": "^17.1.0",
+		"sinon": "^19.0.2",
 		"ts-node": "^10.9.2",
-		"typescript": "^5.7.3"
+		"tsc-alias": "^1.8.11",
+		"tsconfig-paths": "^4.2.0",
+		"typescript": "^5.7.3",
+		"uuid": "^11.1.0"
 	},
 	"dependencies": {
 		"dotenv": "^16.4.7",
