--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"test": "nyc mocha --exit --r ts-node/register --r source-map-support/register -r tsconfig-paths/register ./src/**/*.spec.ts",
 		"dev": "nodemon -r tsconfig-paths/register ./src/index.ts",
-		"build": "rm -r ./dist && tsc --build && tsc-alias",
+		"build": "rm -rf ./dist && tsc --build && tsc-alias",
 		"start": "node ./dist/index.js",
 		"link": "cd ../../ && npm run build && npm link && cd ./examples/hello-world/ && npm link jobar",
 		"open-report": "node -e \"const os = require('os'); const path = './coverage/lcov-report/index.html'; if (os.platform() === 'darwin') { require('child_process').execSync('open ' + path); } else if (os.platform() === 'win32') { require('child_process').execSync('start ' + path); } else { require('child_process').execSync('xdg-open ' + path); }\""
@@ -14,17 +14,22 @@
 	"author": "William Donnette",
 	"license": "MIT",
 	"devDependencies": {
+		"@istanbuljs/nyc-config-typescript": "^1.0.2",
+		"@temporalio/nyc-test-coverage": "^1.11.7",
 		"@temporalio/testing": "^1.11.7",
 		"@tsconfig/node16": "^16.1.3",
 		"@types/express": "^5.0.0",
 		"@types/mocha": "^10.0.10",
+		"@types/sinon": "^17.0.4",
 		"mocha": "^11.1.0",
 		"nodemon": "^3.1.9",
 		"nyc": "^17.1.0",
+		"sinon": "^19.0.2",
 		"ts-node": "^10.9.2",
 		"tsc-alias": "^1.8.10",
 		"tsconfig-paths": "^4.2.0",
-		"typescript": "^5.7.3"
+		"typescript": "^5.7.3",
+		"uuid": "^11.1.0"
 	},
 	"dependencies": {
 		"dotenv": "^16.4.7",
